--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.polidea.test"
+    package="com.github.pwittchen.gesture.app"
     android:versionCode="1"
     android:versionName="1.0" >
 
