--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 15
+    compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.github.pwittchen.gesture.app"
-        minSdkVersion 8
-        targetSdkVersion 15
+        minSdkVersion 15
+        targetSdkVersion 23
     }
 
     buildTypes {
@@ -19,5 +19,8 @@ android {
 
     dependencies {
         compile project(':library')
+        compile 'io.reactivex:rxjava:1.1.1'
+        compile 'io.reactivex:rxandroid:1.1.0'
+        compile 'com.android.support:appcompat-v7:23.1.1'
     }
 }
