--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.pwittchen.gesture.app"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.github.pwittchen.gesture.app">
 
-    <uses-sdk android:minSdkVersion="8" />
+  <application
+      android:icon="@drawable/ic_launcher"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme">
+    <activity
+        android:configChanges="orientation"
+        android:label="@string/listener"
+        android:name="com.github.pwittchen.gesture.app.GestureActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:label="@string/app_name"
-            android:name="com.github.pwittchen.gesture.app.GestureActivity" android:configChanges="orientation">
-            <intent-filter >
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity
+        android:label="@string/rx"
+        android:name=".GestureRxActivity"/>
+  </application>
 
 </manifest>
